SUMMON Change Log
-----------------

2008/01/24 - summon-1.8.4
- changed default keybinding to be more sensible 
  - left click is hotspot activate
  - left drag is scroll/translate
  - middle click is popup menu
- fixed freeze in KDE and other window managers with restrictions on min window
  size.  Bug introduced in 1.8.2
- added hierarchy layout to sumtree; useful for clustering visualization
- added zoom_clamp() drawing element
- added Window.set_boundary().  Limits viewable area.
- added hotspot_custom(), hotspot_circle(), hotspot_polygon()
- added more features to Window.set_visible()
- added OverviewWindow
- added row and column trees to summatrix
- added popup menus to summatrix and sumtree
- changed antialiasing behavior


2007/10/26 - summon-1.8.3
- added colormap for sumtree
- added row/col sampling for summatrix
- fixed handling of hotspots in screen model
- fixed initial window size and position
- fixed window decoration detection (better multiwindow)
- add support for fast direct methods on elements


2007/9/14 - summon-1.8.2
- added GLUT pop-up menus
- added aGroup.get_parent()
- added get_bounding() to Model
- fully implement exception raising within SUMMON module
- fixed summatrix label display with row/col permutation
- fixed rare window resize bug
- fixed rare window position bug (multiwindow "sliding")
- fixed SVG camera transform
- fixed mouse passive motion in an opening window bug
- fixed 64bit in HashTable.h:HashPointer()



2007/8/27 - summon-1.8.1
- small fix for SVG output


2007/8/25 - summon-1.8
- created foundation for a more pythonic model interface (merged cobject)
- removed concept of group id
- beginning to remove artifical requirement of groups
- cleaned up examples
- created setup-macosx.py for Max OS X installation
- uniform use of python-i
- fixed example/13_gameoflife.py


2007/7/11 - summon-1.7.2
More stability and more complete demos
- added features and fixed bugs for summatrix
- added features and fixed bugs for sumtree